UNTESTED: lnp scenario-07 — Gatling 3.15 as the client driver against the same CustomerResource as scenario-06
Single @Test method per class fires Gatling's CustomerCrudSimulation
(10 virtual users, 5-step CRUD roundtrip = ~50 HTTP calls per class)
against the SeBootstrap server. Gatling's global assertions decide
pass/fail; the JUnit method just translates the exit code.

Wiring touches:
* tests/lnp-module/scenario-07-full-crud-with-gatling — new module,
  50 numbered subclasses, copy of scenario-06's Customer entity,
  CustomerResource, persistence config, db-unit seed/dbExpected.
* AbstractFullCrudGatlingScenarioTest calls
  io.gatling.app.Gatling$.MODULE$.fromArgs(String[]) — the only
  Java-friendly entry on Gatling 3.x. CLI args (--simulation,
  --results-folder, --no-reports).
* pom excludes javax.jms (banned by enforcer) and adds an
  argLine with --add-opens java.base/java.lang=ALL-UNNAMED
  for Gatling's StringInternals on JDK 25.
* lnp-module aggregator registers the new module; lnp-report.py
  learns FullCrudGatlingScenario / (gatling) tag.
* verify-all.sh resteasy axis now also sweeps scenario-07
  alongside 05 and 06.

Smoke on owb: Gatling assertions green (0 failed requests, max
response time 985 ms < 1000 ms threshold).

Co-Authored-By: Claude <noreply@anthropic.com>